[package]
name = "ah"
version = "0.1.0"
authors = ["louchenyao <louchenyao@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
rusoto_core = "0.42.0"
rusoto_ec2 = "0.42.0"
prettytable-rs = "^0.8"